demos/ztp/playbooks/files/ui-deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: ui-deployment
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: quay.io/device-edge-workshops/process-control-ui-k8s:1.0.0
        ports:
          - containerPort: 1881
            name: http-ui-port
