demos/ztp/playbooks/files/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
  - port: 1881
    protocol: TCP
    targetPort: 1881
  selector:
    app: ui
  type: NodePort
